# vlm-annotate-verify

./: .gitignore  README.md  pyproject.toml
src/vlm_annotate_verify/: __main__.py  cli.py  config.py  schemas.py
src/vlm_annotate_verify/exporter/: pi_data_sharing.py
src/vlm_annotate_verify/proposer/: batch.py  frames.py  gemini.py  passes.py  prompts.py
src/vlm_annotate_verify/reviewer/: app.py  confidence.py  keymap.py
src/vlm_annotate_verify/reviewer/widgets/: footer.py  frame_view.py  timeline.py  vlm_panel.py
tests/: test_batch.py  test_cli.py  test_confidence.py  test_config.py  test_e2e.py  test_exporter.py  test_frames.py  test_gemini.py  test_keymap.py  test_passes.py  test_prompts.py  test_schemas.py
tests/fixtures/mini_dataset/: roboannotate.toml
tests/test_widgets/: test_app.py  test_footer.py  test_frame_view.py  test_modals.py  test_timeline.py  test_vlm_panel.py
