[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm-annotate-verify"
version = "0.1.0"
description = "VLM-proposed robot episode annotation with TUI verification"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "google-genai>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
]

[project.scripts]
vlm-annotate-verify = "vlm_annotate_verify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vlm_annotate_verify"]
